{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 11,
  "lineage": "f52429b0-be66-a896-4201-5db212485379",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-11-27T16:01:57.211-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prod-project-477306/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/prod-project-477306/global/networks/dev-vpc",
            "params": [],
            "priority": 1000,
            "project": "prod-project-477306",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prod-project-477306/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.gke_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-27T16:01:57.216-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prod-project-477306/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/prod-project-477306/global/networks/dev-vpc",
            "params": [],
            "priority": 1000,
            "project": "prod-project-477306",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prod-project-477306/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.gke_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "gke_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/prod-project-477306/global/networks/dev-vpc",
            "mtu": 0,
            "name": "dev-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8157711720887179399",
            "numeric_id": "8157711720887179399",
            "project": "prod-project-477306",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prod-project-477306/global/networks/dev-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-27T16:01:58.237-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/prod-project-477306/regions/us-central1/subnetworks/dev-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "dev-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/prod-project-477306/global/networks/dev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prod-project-477306",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prod-project-477306/regions/us-central1/subnetworks/dev-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 837539039778527385
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.gke_vpc"
          ]
        }
      ]
    }
  ]
}